--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.0.1",
+    "numeral": "^2.0.6",
     "path": "^0.12.7",
+    "regex": "^0.1.1",
     "sequelize": "^6.28.0"
   }
 }
